# ChangeLog for dev-ruby/cucumber
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

*cucumber-0.3.90 (22 Jul 2009)

  22 Jul 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.90.ebuild:
  Version bump with many enhancements and bug fixes.

*cucumber-0.3.11 (06 Jun 2009)

  06 Jun 2009; Hans de Graaff <graaff@gentoo.org> -cucumber-0.3.5.ebuild,
  -cucumber-0.3.6.ebuild, -cucumber-0.3.7.ebuild, +cucumber-0.3.11.ebuild:
  Version bump with minor enhancements. Remove old versions.

*cucumber-0.3.9 (28 May 2009)

  28 May 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.9.ebuild:
  Version bump with important bug fixes for Ruby on Rails support.

*cucumber-0.3.7 (24 May 2009)

  24 May 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.7.ebuild:
  Version bump with minor enhancements and bug fixes.

*cucumber-0.3.6 (20 May 2009)

  20 May 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.6.ebuild:
  Version bump with support for the Kanban development process.

  16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove old versions

  16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump.

  10 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump with minor bug fixes.

  04 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump

  27 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump with minor bug fixes.

  15 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump.

  14 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove old versions.

  30 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump

  29 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump

  25 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump, remove old stable version.

  19 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump: major overhaul of the underlying implementation.
