@@ -4,15 +4,17 @@ Hash: SHA1
 DIST cucumber-0.3.11.gem 161280 RMD160 f7a94167c4ec9ce94c9a62ec404d5d9dbd8495eb SHA1 857556f388f131366dc3b3461377a02adf0b24e2 SHA256 b09436e0cda9f1d6dab51cf465783d7f95526fcc75165c6a09d4db7cbcdb3899
 DIST cucumber-0.3.9.gem 155648 RMD160 22f5bd0682ee22499237e3e1fc06a994b4d0a6ea SHA1 3dd0aa11989470b73dee53853062422737589236 SHA256 dbffcedd3bf87a8b220c60d2499239bbc03c694afaa1e8f37982924ae9dacf54
 DIST cucumber-0.3.90.gem 150528 RMD160 29cfe642f7a681b3afb55ce47f27ebfe8cda0983 SHA1 60dbbb9c03c09b0580dcd3bd72fe48a95752c3ea SHA256 532447cbad994bb87ccf312020114c5261049a18c11af9194f89b1c16a04ab04
+DIST cucumber-0.3.91.gem 150528 RMD160 3ac70716eb87a96b92aac3d1140cf86316536d2a SHA1 4a438efe364b70a0e98b93a768943db0da7c7147 SHA256 0656958b4d333065a98ba72a6d0902090f555cf611f0ecfa6f823c2f47dc9353
 EBUILD cucumber-0.3.11.ebuild 565 RMD160 3dc812f56130b0a300ed6b45403e199ff909e444 SHA1 9a5e19fe7aadbae6a2ebe8754d82d3cb54f3b71b SHA256 b8f825af7d416968e0a871af8877add42129e7b88537b5bebe912fa3589daef5
 EBUILD cucumber-0.3.9.ebuild 565 RMD160 3dc812f56130b0a300ed6b45403e199ff909e444 SHA1 9a5e19fe7aadbae6a2ebe8754d82d3cb54f3b71b SHA256 b8f825af7d416968e0a871af8877add42129e7b88537b5bebe912fa3589daef5
 EBUILD cucumber-0.3.90.ebuild 538 RMD160 1eb038d5a080b5e77527f11a189be8047452e651 SHA1 53e29baaae138c7c63b308bd9b75929780891aa3 SHA256 7c7684cb5c3b5a60b935395a7b6cfb8f29cf5f961f414d14494ebc0535849d6f
-MISC ChangeLog 2570 RMD160 bb91186a92bb7e9efdcde19549dfcd10e3150a3d SHA1 d394b1b3a36b30031912355921ba9cae5c31e204 SHA256 ff21eb9f17475d9f6b7aa81f3a4aa631e9a85e5cdec4a65d063e0595988ecd31
+EBUILD cucumber-0.3.91.ebuild 558 RMD160 4dc5c83c99fd370018299132440bffac07ec780e SHA1 163b40a647604b73b9fec34a56908656889e586d SHA256 6a465e73787e20ee9dd29ce9247c48df235560136e38fa5f225715a5fccfd046
+MISC ChangeLog 2694 RMD160 6ae0bb0a30560d3acc37e3801573ea74c904dccb SHA1 e74c3130f8ebee20d156560efce45ebb7ee7c129 SHA256 3012cfd0a8312e14b01e644e752003595b8e87f672c596fea27bc76ac22fc07a
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpmwT0ACgkQVYU2Ai8K93fJvwCePkxpA614RT9EaXBXfltQ1Oji
-Mi0AnjKcMaSvWrjYYjERWhrXHMzUGVDy
-=BAz1
+iEYEARECAAYFAkpuklEACgkQVYU2Ai8K93dVmgCgmQ+HlCZ6Tx3RI4FAZxbceVB6
+wHsAoINXJ14oRCkg3xBFuEI9cgyXI0xm
+=eeE5
 -----END PGP SIGNATURE-----
